<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <include layout="@layout/title_history" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/historyLinearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <Button
                android:id="@+id/HistoryView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyView"
                android:textSize="22sp">
            </Button>
            <Button
                android:id="@+id/Classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Classfication"
                android:textSize="22sp">
            </Button>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/historyConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/projectName"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/ProjectListSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="12dp"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/ShowTime"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/ProjectListSpinner"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="66dp"
                android:layout_height="37dp"
                android:src="@drawable/history_tilde"
                app:layout_constraintBottom_toBottomOf="@+id/date1"
                app:layout_constraintStart_toEndOf="@+id/date1"
                app:layout_constraintTop_toTopOf="@+id/date1" />

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:hint="@string/ShowTime"
                android:textSize="28sp"
                android:background="@drawable/bg_edittext"
                app:layout_constraintBottom_toBottomOf="@+id/date1"
                app:layout_constraintStart_toEndOf="@+id/date1">
            </TextView>

            <Button
                android:id="@+id/Confirm"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/btn_Confirm"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/date2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/Printf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/btn_printf"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/UpData"
                app:layout_constraintTop_toBottomOf="@+id/UpData" />

            <Button
                android:id="@+id/Export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/btn_export"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/Printf"
                app:layout_constraintTop_toBottomOf="@+id/Printf" />

            <Button
                android:id="@+id/Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/btn_delete"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/Export"
                app:layout_constraintTop_toBottomOf="@+id/Export" />

            <Button
                android:id="@+id/UpData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="50dp"
                android:text="@string/Btn_upload"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="1100dp"
                android:layout_height="400dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date2">

                <LinearLayout
                    android:id="@+id/LinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date2">
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/FuzzyQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btn_FuzzyQuery"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/Confirm"
                app:layout_constraintTop_toTopOf="@+id/Confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <FrameLayout
                android:id="@+id/bottom_Test_Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>